🐛 fix(toggle): added high contrast css for toggle.

--- a/assets/scss/shared-ui/_toggles.scss
+++ b/assets/scss/shared-ui/_toggles.scss
@@ -96,7 +96,7 @@
 			@media (forced-colors: active) and (prefers-color-scheme: dark), (-ms-high-contrast: white-on-black) {
 				&:checked {
 					~ .sui-toggle-slider {
-						background-color: map-get($button-background, orange);
+						background-color: map-get($button-background, orange) !important;
 						&:before {
 							background-color: $cloud;
 						}
